--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Homewood AL"
   employer         : "Samford University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "rbetts@samford.edu" 
 
   # Academic websites
   academia         : # URL
