--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/randall-betts-1374782b0/" # Username
+  linkedin         : "randall-betts-1374782b0" # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
